exercise1/thin/ordered_omp_scalability/slurm-414206.out
mpicc -O3 -fopenmp -march=native -g -Iinclude -c main.c
mkdir -p obj
mpicc -O3 -fopenmp -march=native -g -Iinclude -c src/static_evolution.c -o obj/static_evolution.o
mkdir -p obj
mpicc -O3 -fopenmp -march=native -g -Iinclude -c src/ordered_evolution.c -o obj/ordered_evolution.o
src/ordered_evolution.c: In function ‘ordered_evolution’:
src/ordered_evolution.c:89:22: error: ‘start’ undeclared (first use in this function)
   89 |         for (int i = start; i < end; i++)
      |                      ^~~~~
src/ordered_evolution.c:89:22: note: each undeclared identifier is reported only once for each function it appears in
src/ordered_evolution.c:89:33: error: ‘end’ undeclared (first use in this function)
   89 |         for (int i = start; i < end; i++)
      |                                 ^~~
make: *** [Makefile:21: obj/ordered_evolution.o] Error 1
--------------------------------------------------------------------------
mpirun was unable to find the specified executable file, and therefore
did not launch the job.  This error was first reported for process
rank 0; it may have occurred for other processes as well.

NOTE: A common cause for this error is misspelling a mpirun command
      line parameter option (remember that mpirun interprets the first
      unrecognized command line token as the executable).

Node:       thin003
Executable: main.x
--------------------------------------------------------------------------
12 total processes failed to start
--------------------------------------------------------------------------
mpirun was unable to find the specified executable file, and therefore
did not launch the job.  This error was first reported for process
rank 0; it may have occurred for other processes as well.

NOTE: A common cause for this error is misspelling a mpirun command
      line parameter option (remember that mpirun interprets the first
      unrecognized command line token as the executable).

Node:       thin003
Executable: main.x
--------------------------------------------------------------------------
--------------------------------------------------------------------------
mpirun was unable to find the specified executable file, and therefore
did not launch the job.  This error was first reported for process
rank 0; it may have occurred for other processes as well.

NOTE: A common cause for this error is misspelling a mpirun command
      line parameter option (remember that mpirun interprets the first
      unrecognized command line token as the executable).

Node:       thin003
Executable: main.x
--------------------------------------------------------------------------
--------------------------------------------------------------------------
mpirun was unable to find the specified executable file, and therefore
did not launch the job.  This error was first reported for process
rank 0; it may have occurred for other processes as well.

NOTE: A common cause for this error is misspelling a mpirun command
      line parameter option (remember that mpirun interprets the first
      unrecognized command line token as the executable).

Node:       thin003
Executable: main.x
--------------------------------------------------------------------------
--------------------------------------------------------------------------
mpirun was unable to find the specified executable file, and therefore
did not launch the job.  This error was first reported for process
rank 0; it may have occurred for other processes as well.

NOTE: A common cause for this error is misspelling a mpirun command
      line parameter option (remember that mpirun interprets the first
      unrecognized command line token as the executable).

Node:       thin003
Executable: main.x
--------------------------------------------------------------------------
--------------------------------------------------------------------------
mpirun was unable to find the specified executable file, and therefore
did not launch the job.  This error was first reported for process
rank 0; it may have occurred for other processes as well.

NOTE: A common cause for this error is misspelling a mpirun command
      line parameter option (remember that mpirun interprets the first
      unrecognized command line token as the executable).

Node:       thin003
Executable: main.x
--------------------------------------------------------------------------
--------------------------------------------------------------------------
mpirun was unable to find the specified executable file, and therefore
did not launch the job.  This error was first reported for process
rank 0; it may have occurred for other processes as well.

NOTE: A common cause for this error is misspelling a mpirun command
      line parameter option (remember that mpirun interprets the first
      unrecognized command line token as the executable).

Node:       thin003
Executable: main.x
--------------------------------------------------------------------------
--------------------------------------------------------------------------
mpirun was unable to find the specified executable file, and therefore
did not launch the job.  This error was first reported for process
rank 0; it may have occurred for other processes as well.

NOTE: A common cause for this error is misspelling a mpirun command
      line parameter option (remember that mpirun interprets the first
      unrecognized command line token as the executable).

Node:       thin003
Executable: main.x
--------------------------------------------------------------------------
--------------------------------------------------------------------------
mpirun was unable to find the specified executable file, and therefore
did not launch the job.  This error was first reported for process
rank 0; it may have occurred for other processes as well.

NOTE: A common cause for this error is misspelling a mpirun command
      line parameter option (remember that mpirun interprets the first
      unrecognized command line token as the executable).

Node:       thin003
Executable: main.x
--------------------------------------------------------------------------
--------------------------------------------------------------------------
mpirun was unable to find the specified executable file, and therefore
did not launch the job.  This error was first reported for process
rank 0; it may have occurred for other processes as well.

NOTE: A common cause for this error is misspelling a mpirun command
      line parameter option (remember that mpirun interprets the first
      unrecognized command line token as the executable).

Node:       thin003
Executable: main.x
--------------------------------------------------------------------------
--------------------------------------------------------------------------
mpirun was unable to find the specified executable file, and therefore
did not launch the job.  This error was first reported for process
rank 0; it may have occurred for other processes as well.

NOTE: A common cause for this error is misspelling a mpirun command
      line parameter option (remember that mpirun interprets the first
      unrecognized command line token as the executable).

Node:       thin003
Executable: main.x
--------------------------------------------------------------------------
--------------------------------------------------------------------------
mpirun was unable to find the specified executable file, and therefore
did not launch the job.  This error was first reported for process
rank 0; it may have occurred for other processes as well.

NOTE: A common cause for this error is misspelling a mpirun command
      line parameter option (remember that mpirun interprets the first
      unrecognized command line token as the executable).

Node:       thin003
Executable: main.x
--------------------------------------------------------------------------
--------------------------------------------------------------------------
mpirun was unable to find the specified executable file, and therefore
did not launch the job.  This error was first reported for process
rank 0; it may have occurred for other processes as well.

NOTE: A common cause for this error is misspelling a mpirun command
      line parameter option (remember that mpirun interprets the first
      unrecognized command line token as the executable).

Node:       thin003
Executable: main.x
--------------------------------------------------------------------------
rm -rf /u/dssc/galess00/FHPC-assignment/exercise1/thin/ordered_omp_scalability/*.x obj/*.o obj/*.a
rm /u/dssc/galess00/FHPC-assignment/exercise1/thin/ordered_omp_scalability/*.pgm
rm: cannot remove '/u/dssc/galess00/FHPC-assignment/exercise1/thin/ordered_omp_scalability/*.pgm': No such file or directory
make: *** [Makefile:29: clean_img] Error 1
